@@ -1,4 +1,4 @@
-3.11.0+beta2-dev2 (2008-10-23)
+3.11.0+beta2-dev4 (2008-11-17)
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
